olvide los icons

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <section class="info">
         <div class="banner row">
             <div class=" col-7">
+            <img src="img/icono.jpg" alt="" class="icono">
             </div>
             <div class="big-hero col-5">
                    <div class="big-info">
